--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>This is<span class="home__title-color">under construction</span><br>Testing Testing Testing</h1>
+                    <h1 class="home__title">Hi,<br>This is<span class="home__title-color">UNDER CONSTRUCTION</span><br>Testing Testing Testing</h1>
 
                     <a href="#" class="button">News are here</a>
                 </div>
