--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i></a>
-                    <span style="margin-left: 6px;">Construction News</span>
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon" target="content-frame"><i class='bx bx-trending-up'></i></a>
-                    <span style="margin-left: 6px;">Share Market</span>
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon" target="content-frame"><i class='bx bx-current-location' ></i></a>
-                    <span style="margin-left: 6px;">Nepali News</span>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i>
+                    <span style="margin-left: 6px;">Construction News</span></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon" target="content-frame"><i class='bx bx-trending-up'></i>
+                    <span style="margin-left: 6px;">Share Market</span></a>
+                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon" target="content-frame"><i class='bx bx-current-location' ></i>
+                    <span style="margin-left: 6px;">Nepali News</span></a>
                 </div>
 
                 <iframe name="content-frame" style="width: 100%; height: 500px; border: none;"></iframe>
