--- a/index.html
+++ b/index.html
@@ -218,5 +218,46 @@
 
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
+
+        <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const newsBox = document.createElement('div');
+        newsBox.classList.add('news-box');
+        document.body.appendChild(newsBox);
+
+        const newsBoxHeader = document.createElement('div');
+        newsBoxHeader.classList.add('news-box-header');
+        newsBoxHeader.innerHTML = `
+            <h2>News</h2>
+            <a href="#" id="close-news">Close</a>
+        `;
+        newsBox.appendChild(newsBoxHeader);
+
+        const iframe = document.createElement('iframe');
+        newsBox.appendChild(iframe);
+
+        const links = document.querySelectorAll('.home__social-icon');
+
+        links.forEach(link => {
+            link.addEventListener('click', function(event) {
+                event.preventDefault();
+                const url = this.href;
+
+                iframe.src = url;
+                newsBox.style.display = 'block';
+                document.body.style.overflow = 'hidden'; // Prevent scrolling on the main content
+            });
+        });
+
+        const closeNews = document.getElementById('close-news');
+        closeNews.addEventListener('click', function(event) {
+            event.preventDefault();
+            newsBox.style.display = 'none';
+            document.body.style.overflow = ''; // Restore scrolling
+        });
+    });
+</script>
+
+        
     </body>
 </html>
