--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#construction-news" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i>
+                    <a href="https://bit.ly/3ZipvSD#construction-news" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i>
                     <span style="margin-left: 6px;">Construction News</span></a>
                     <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon" target="content-frame"><i class='bx bx-trending-up'></i>
                     <span style="margin-left: 6px;">Share Market</span></a>
