--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>This page is<span class="home__title-color">UNDER CONSTRUCTION</span><br>Testing Testing Testing</h1>
 
-                    <a href="#" class="button">News are here</a>
+                    <a href="#" class="button">Social links</a>
                 </div>
 
                 <div class="home__social">
-                    <a href="https://bit.ly/3ZipvSD" class="home__social-icon" target="content-frame"><i class='bx bx-building-house'></i>
-                    <span style="margin-left: 6px;">Construction News</span></a>
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#share-market" class="home__social-icon" target="content-frame"><i class='bx bx-trending-up'></i>
-                    <span style="margin-left: 6px;">Share Market</span></a>
-                    <a href="https://krisssna.github.io/RSS-Feed-Reader/feed.html#nepali-news" class="home__social-icon" target="content-frame"><i class='bx bx-current-location' ></i>
-                    <span style="margin-left: 6px;">Nepali News</span></a>
+                    <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" class="home__social-icon" target="content-frame"><i class='bx bxl-linkedin-square'></i>
+                    <span style="margin-left: 6px;">LinkedIn</span></a>
+                    <a href="https://www.facebook.com/0kisn/" class="home__social-icon" target="content-frame"><i class='bx bxl-facebook'></i>
+                    <span style="margin-left: 6px;">Facebook</span></a>
+                    <a href="https://www.youtube.com/@sankhatro" class="home__social-icon" target="content-frame"><i class='bx bxl-youtube' ></i>
+                    <span style="margin-left: 6px;">Youtube</span></a>
                 </div>
 
                 <iframe name="content-frame" style="width: 100%; height: 500px; border: none;"></iframe>
