--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>This page is<span class="home__title-color">UNDER CONSTRUCTION</span><br>Testing Testing Testing</h1>
+                    <h1 class="home__title">Hi,<br>This is<span class="home__title-color">open space.</span><br> Feel free to share your stories.
+
+</h1>
 
                     <a href="#" class="button">Social links</a>
                 </div>
