--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>This is<span class="home__title-color">open space.</span><br> Feel free to share your stories.
+                    <h1 class="home__title">Hi,<br>This is<span class="home__title-color">open space.</span><br> I love to hear stories.
 
 </h1>
 
