--- a/index.html
+++ b/index.html
@@ -160,30 +160,46 @@
             </section>
 
             <!--===== WORK =====-->
-            <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+            <!--===== WORK =====-->
+<section class="work section" id="work">
+    <h2 class="section-title">Work</h2>
 
-                <div class="work__container bd-grid">
-                    <a href="" class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
-                    </a>
-                </div>
-            </section>
+    <div class="work__container bd-grid">
+        <!-- Playlist 1 -->
+        <div class="playlist-column">
+            <h3 class="playlist-title">Playlist 1: Construction Tips</h3>
+            <div class="playlist-scroll">
+                <iframe 
+                    src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_4KIqHW9KzB58p-fCeZii8s" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+
+        <!-- Playlist 2 -->
+        <div class="playlist-column">
+            <h3 class="playlist-title">Playlist 2: Project Management</h3>
+            <div class="playlist-scroll">
+                <iframe 
+                    src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_5AqHyf_WGHxki_8J0aH8D0" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+
+        <!-- Playlist 3 -->
+        <div class="playlist-column">
+            <h3 class="playlist-title">Playlist 3: Site Planning</h3>
+            <div class="playlist-scroll">
+                <iframe 
+                    src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_4GG2BboKcbmknmN3IiqRiu" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+</section>
+
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
