--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div class="work__container bd-grid">
         <!-- Playlist 1 -->
         <div class="playlist-column">
-            <h3 class="playlist-title">Playlist 1: Construction Tips</h3>
+            <h3 class="playlist-title">Playlist 1: Field Work</h3>
             <div class="playlist-scroll">
                 <iframe 
                     src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_4KIqHW9KzB58p-fCeZii8s" 
@@ -178,7 +178,7 @@
 
         <!-- Playlist 2 -->
         <div class="playlist-column">
-            <h3 class="playlist-title">Playlist 2: Project Management</h3>
+            <h3 class="playlist-title">Playlist 2: Sketchup Tips</h3>
             <div class="playlist-scroll">
                 <iframe 
                     src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_5AqHyf_WGHxki_8J0aH8D0" 
@@ -189,7 +189,7 @@
 
         <!-- Playlist 3 -->
         <div class="playlist-column">
-            <h3 class="playlist-title">Playlist 3: Site Planning</h3>
+            <h3 class="playlist-title">Playlist 3: Personal Time</h3>
             <div class="playlist-scroll">
                 <iframe 
                     src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_4GG2BboKcbmknmN3IiqRiu" 
