--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>This is <span class="home__title-color">open space</span><br>I love to hear stories.</h1>
+                    <h1 class="home__title">Hi,<br>what's <span class="home__title-color">up</span><br>!</h1>
                     <a href="#" class="button">Social links</a>
                 </div>
                 <div class="home__social">
