--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <!-- Playlist 1 -->
         <div class="playlist">
             <h3 class="playlist__title">Playlist 1</h3>
-            <iframe class="playlist__iframe" src="https://www.youtube.com/playlist?list=PLELAQjFzxU_4GG2BboKcbmknmN3IiqRiu" frameborder="0" allowfullscreen></iframe>
+            <iframe class="playlist__iframe" src="https://www.youtube.com/embed/videoseries?list=PLELAQjFzxU_4GG2BboKcbmknmN3IiqRiu" frameborder="0" allowfullscreen></iframe>
             <button class="button playlist__button" onclick="loadMoreVideos('playlist1')">More Videos</button>
         </div>
         <!-- Playlist 2 -->
