--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
 								</div><!--/.contact-adress-->
 								<div class="hm-foot-icon">
 									<ul>
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
+										<li><a href="https://www.facebook.com/0kisn/" target="_blank"><i class="fa fa-facebook"></i></a></li><!--/li-->
 										
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
