--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								<div class="about-list-icon">
 									<ul>
 										<li>
-											<a href="#">
+											<a href="https://www.facebook.com/0kisn/">
 												<i  class="fa fa-facebook" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
