--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Krishna Niraula, is a experienced construction professional from Solukhumbu, Nepal, with over 15 years of expertise in the field. He has served as a supervisor, surveyor, and site manager, excelling in project management and site operations. His extensive knowledge and leadership skills make him an emerging figure in the construction industry.
+									Humans are a beautiful creation of nature, embodying its essence in their very existence. Human beings themselves are a part of nature, intricately woven into its infinite cycle. There are three kinds of people: some explore the beginning, seeking the origins of existence; others chase the end, striving to uncover what lies beyond the known. Then, there are those who embrace the present, experiencing the beauty of simply being in the moment. Together, these perspectives form a unique balance, reflecting the depth and mystery of life itself.
 								</h3>
 								<p>
 								
