--- a/index.html
+++ b/index.html
@@ -133,7 +133,14 @@
 											<p>mail@krishnaniraula.com.np</p>
 										</div>
 									</div>
-									
+									<div class="col-sm-4">
+										<div class="single-about-add-info">
+											<h3>Phone No.</h3>
+											<p> </p>
+										</div>
+									</div>
+
+
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>website</h3>
