--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									</div>
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
-											<h3>Phone No.</h3>
+											<h3>Phone</h3>
 											<p> </p>
 										</div>
 									</div>
