--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Humans are a beautiful creation of nature, embodying its essence in their very existence. Human beings themselves are a part of nature, intricately woven into its infinite cycle. There are three kinds of people: some explore the beginning, seeking the origins of existence; others chase the end, striving to uncover what lies beyond the known. Then, there are those who embrace the present, experiencing the beauty of simply being in the moment. Together, these perspectives form a unique balance, reflecting the depth and mystery of life itself.
+									Good to believe, easy to understand.
 								</h3>
 								<p>
 								
@@ -349,7 +349,7 @@
 										<span class="progressText">cad drawing</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
-											   <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="10" aria-valuemax="100" style="">
+											   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="10" aria-valuemax="100" style="">
 												    
 											   </div>
 											</div>
