--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
+					    <li class="smooth-menu"><a href="Apps">Apps</a></li>li>
+						
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
@@ -386,6 +388,31 @@
 		</section><!--/.contact-->
 		<!--contact end -->
 
+<section id="Apps">
+    <section id="abc">
+        <h2>abc</h2>
+        <h3>Subheading 1</h3>
+        <h3>Subheading 2</h3>
+        <h3>Subheading 3</h3>
+        <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
+        <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
+        <br>
+        <a href="#terms-of-use">Terms of Use</a>
+        <a href="#privacy-policy">Privacy Policy</a>
+    </section>
+</section>
+
+<section id="terms-of-use">
+    <!-- Content from your GitHub repo for Terms of Use -->
+</section>
+
+<section id="privacy-policy">
+    <!-- Content from your GitHub repo for Privacy Policy -->
+</section>
+
+
+
+		
 		<!--footer-copyright start-->
 		<footer id="footer-copyright" class="footer-copyright">
 			<div class="container">
