--- a/index.html
+++ b/index.html
@@ -397,18 +397,11 @@
         <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
         <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
         <br>
-        <a href="#terms-of-use">Terms of Use</a>
-        <a href="#privacy-policy">Privacy Policy</a>
+        <a href="assets/Apps/Caputok/privacy_policy.md" target="_blank">Privacy Policy</a>
+	<a href="assets/Apps/Caputok/terms_of_use.md" target="_blank">Terms of Use</a>
     </section>
 </section>
 
-<section id="terms-of-use">
-    <!-- Content from your GitHub repo for Terms of Use -->
-</section>
-
-<section id="privacy-policy">
-    <!-- Content from your GitHub repo for Privacy Policy -->
-</section>
 
 
 
