--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
-					    <li class="smooth-menu"><a href="Apps">Apps</a></li>li>
+					    <li class="smooth-menu"><a href="Apps">Apps</a></li>
 						
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
