--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Use for Caputok</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+  <h1>Privacy Policy for Caputok</h1>
+  <p>Effective Date: [Insert Date]</p>
+  <p>Caputok (“the App”) is committed to protecting your privacy. This Privacy Policy explains how your data is handled when you use our app.</p>
+  <h2>1. Data Collection</h2>
+  <p>User-Uploaded Files: Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</p>
+<p>Offline Usage: The App does not require or use an internet connection, and no information is shared externally.</p>
+<h2>2. Permissions</h2>
+<p>Caputok requires certain device permissions to function:</p>
+<p>Storage Access: To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
+<h3>3. Data Usage</h3>
+<p>The App generates results based on the uploaded files. These results are stored locally on your device and are not shared with any third party.</p>
+<p>The generated links (e.g., https://tiktok.com/@username) are based solely on the input files you provide and are not associated with any external platform.</p>
+<h2>4. Third-Party Services</h2>
+  <p>As of the current version, Caputok does not integrate with or use any third-party services.</p>
+<h2>5. User Rights (EU GDPR Compliance)</h2>
+<h3>If you are located in the European Union, you have the following rights regarding your data:</h3>
+<p>Right to Access: Since no data is stored or shared externally, there is no data stored by Caputok for you to access.</p>
+<p>Right to Deletion: Uploaded files and generated results can be deleted directly from your device.</p>
+<h2>6. Changes to the Privacy Policy</h2>
+<p>We may update this Privacy Policy from time to time. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
+<h2>Contact Information:</h2>
+<p>For questions about this Privacy Policy, contact us at:</p>
+<p>mail@krishnaniraula.com.np</p>
