--- a/index.html
+++ b/index.html
@@ -88,7 +88,22 @@
 
 		</header><!-- /.top-area-->
 		<!-- top-area End -->
-	
+
+
+<section id="Apps">
+    <section id="abc">
+        <h2>abc</h2>
+        <h3>Subheading 1</h3>
+        <h3>Subheading 2</h3>
+        <h3>Subheading 3</h3>
+        <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
+        <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
+        <br>
+        <a href="assets/Apps/Caputok/privacy_policy.html" target="_blank">Privacy Policy</a>
+	<a href="assets/Apps/Caputok/terms_of_use.html" target="_blank">Terms of Use</a>
+    </section>
+</section>
+		
 		<!--welcome-hero start -->
 		<section id="welcome-hero" class="welcome-hero">
 			<div class="container">
@@ -388,19 +403,7 @@
 		</section><!--/.contact-->
 		<!--contact end -->
 
-<section id="Apps">
-    <section id="abc">
-        <h2>abc</h2>
-        <h3>Subheading 1</h3>
-        <h3>Subheading 2</h3>
-        <h3>Subheading 3</h3>
-        <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
-        <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
-        <br>
-        <a href="assets/Apps/Caputok/privacy_policy.md" target="_blank">Privacy Policy</a>
-	<a href="assets/Apps/Caputok/terms_of_use.md" target="_blank">Terms of Use</a>
-    </section>
-</section>
+
 
 
 
