--- a/assets/apps/caputok/privacy_policy.html
+++ b/assets/apps/caputok/privacy_policy.html
@@ -39,3 +39,5 @@
 <h2>Contact Information:</h2>
 <p>For questions about this Privacy Policy, contact us at:</p>
 <p>mail@krishnaniraula.com.np</p>
+</body>
+</html>
