--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
-					    <li class="smooth-menu"><a href="Apps">Apps</a></li>
-						
+					     <li class="smooth-menu">
+                                		<a href="#">Apps</a>
+                               			 <ul class="dropdown-content">
+                                  			  <li><a href="#caputok">Caputok</a></li>
+                                   			 <li><a href="#abc">ABC</a></li>
+						 </ul>
+					     </li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
