--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 		</header><!-- /.top-area-->
 		<!-- top-area End -->
 
-
-<section id="Apps">
+<!-- Apps Section -->
+<section id="Apps" style="display:none;">
     <section id="abc">
-        <h2>abc</h2>
+        <h2>Caputok</h2>
         <h3>Subheading 1</h3>
         <h3>Subheading 2</h3>
         <h3>Subheading 3</h3>
@@ -105,8 +105,22 @@
         <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
         <br>
         <a href="assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a>
-	<a href="assets/Apps/Caputok/terms_of_use.html" target="_blank">Terms of Use</a>
+	<a href="assets/apps/caputok/terms_of_use.html" target="_blank">Terms of Use</a>
     </section>
+
+	<section id="abc">
+ 	<h2>ABC</h2>
+            <h3>Subheading 1</h3>
+            <h3>Subheading 2</h3>
+            <h3>Subheading 3</h3>
+            <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
+            <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
+            <br>
+            <a href="assets/Apps/ABC/privacy_policy.html" target="_blank">Privacy Policy</a>
+            <a href="assets/Apps/ABC/terms_of_use.html" target="_blank">Terms of Use</a>
+        </section>
+
+		
 </section>
 		
 		<!--welcome-hero start -->
