--- a/index.html
+++ b/index.html
@@ -78,8 +78,22 @@
 					     <li class="smooth-menu">
                                 		<a href="#">Apps</a>
                                			 <ul class="dropdown-content">
-                                  			  <li><a href="#caputok">Caputok</a></li>
-                                   			 <li><a href="#abc">ABC</a></li>
+                                  			  <li><a href="#caputok">Caputok</a>
+							  <ul class="sub-drop-down-content">
+							 <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
+                      					  <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
+                      					  <li><a href="assets/Apps/Caputok/privacy_policy.html" target="_blank">Privacy Policy</a></li>
+                   					     <li><a href="assets/Apps/Caputok/terms_of_use.html" target="_blank">Terms of Use</a></li>
+                 					   </ul>
+							  </li>
+                                   			 <li><a href="#abc">ABC</a>
+							  <ul class="sub-dropdown-content">
+                     					   <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
+                     					   <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
+                    					    <li><a href="assets/Apps/ABC/privacy_policy.html" target="_blank">Privacy Policy</a></li>
+                   					     <li><a href="assets/Apps/ABC/terms_of_use.html" target="_blank">Terms of Use</a></li>
+                 					   </ul>
+							 </li>
 						 </ul>
 					     </li>
 			                </ul><!--/.nav -->
@@ -305,32 +319,7 @@
 		</section><!--/.skills-->
 		<!--skills end -->
 
-<!-- Apps Section -->
-<section id="Apps" style="display:none;">
-    <section id="abc" style="display: none;">
-        <h2>Caputok</h2>
-        <h3>Subheading 1</h3>
-        <h3>Subheading 2</h3>
-        <h3>Subheading 3</h3>
-        <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
-        <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
-        <br>
-        <a href="assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a>
-	<a href="assets/apps/caputok/terms_of_use.html" target="_blank">Terms of Use</a>
-    </section>
 
-	<section id="abc" style="display: none;">
- 	<h2>ABC</h2>
-            <h3>Subheading 1</h3>
-            <h3>Subheading 2</h3>
-            <h3>Subheading 3</h3>
-            <a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a>
-            <a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a>
-            <br>
-            <a href="assets/Apps/ABC/privacy_policy.html" target="_blank">Privacy Policy</a>
-            <a href="assets/Apps/ABC/terms_of_use.html" target="_blank">Terms of Use</a>
-        </section>
-</section>
 		
 		<!--contact start -->
 		<section id="contact" class="contact">
