--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                                 		<a href="#">Apps</a>
                                			 <ul class="dropdown-content">
                                   			  <li><a href="#caputok">Caputok</a>
-							  <ul class="sub-drop-down-content">
+							  <ul class="sub-drop-down-content" style="display:none;">
 							 <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
                       					  <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
-                      					  <li><a href="assets/Apps/Caputok/privacy_policy.html" target="_blank">Privacy Policy</a></li>
-                   					     <li><a href="assets/Apps/Caputok/terms_of_use.html" target="_blank">Terms of Use</a></li>
+                      					  <li><a href="assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a></li>
+                   					     <li><a href="assets/apps/caputok/terms_of_use.html" target="_blank">Terms of Use</a></li>
                  					   </ul>
 							  </li>
                                    			 <li><a href="#abc">ABC</a>
