--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 		<a href="#">Apps</a>
                                			 <ul class="dropdown-content">
                                   			  <li><a href="#caputok">Caputok</a>
-							  <ul class="sub-drop-down-content" target="_blank">
+							  <ul class="sub-drop-down-content">
 							 <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
                       					  <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
                       					  <li><a href="assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a></li>
