--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							  <ul class="sub-drop-down-content">
 							 <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
                       					  <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
-                      					  <li><a href="assets/apps/caputok/privacy_policy.html" target="_blank">Privacy Policy</a></li>
+                      					  <li><a href="assets/apps/caputok/privacy_policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a></li>
                    					     <li><a href="assets/apps/caputok/terms_of_use.html" target="_blank">Terms of Use</a></li>
                  					   </ul>
 							  </li>
