--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 <script src="assets/js/custom.js"></script>
 
 <!-- New dropdown functionality -->
-<script src="assets/js/dropdown.js"></script>
+<!--<script src="assets/js/dropdown.js"></script>
 		
     </body>
 	
