--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 		<a href="#">Apps</a>
                                			 <ul class="dropdown-content">
                                   			  <li><a href="#caputok">Caputok</a>
-							  <ul class="sub-drop-down-content">
+							  <ul class="sub-dropdown-content">
 							 <li class="smooth-menu"><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
                       					  <li class="smooth-menu"><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
                       					  <li class="smooth-menu"><a href="assets/apps/caputok/privacy_policy.html" target="_blank" >Privacy Policy</a></li>
@@ -472,7 +472,7 @@
 <script src="assets/js/custom.js"></script>
 
 <!-- New dropdown functionality -->
-<!--<script src="assets/js/dropdown.js"></script>
+<script src="assets/js/dropdown.js"></script>
 		
     </body>
 	
