--- a/index.html
+++ b/index.html
@@ -78,21 +78,23 @@
 					     <li class="smooth-menu">
                                 		<a href="#">Apps</a>
                                			 <ul class="dropdown-content">
-                                  			  <li><a href="#caputok">Caputok</a>
-							  <ul class="sub-dropdown-content">
-							 <li class="smooth-menu"><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
-                      					  <li class="smooth-menu"><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
-                      					  <li class="smooth-menu"><a href="assets/apps/caputok/privacy_policy.html" target="_blank" >Privacy Policy</a></li>
-                   					     <li class="smooth-menu"><a href="assets/apps/caputok/terms_of_use.html" target="_blank">Terms of Use</a></li>
+                                  			  <li>
+							<a href="#caputok">Caputok</a>
+							<ul class="sub-dropdown-content">
+							 	<li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
+                      					 	 <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
+                      					 	 <li><a href="assets/apps/caputok/privacy_policy.html" target="_blank" >Privacy Policy</a></li>
+                   					    	 <li><a href="assets/apps/caputok/terms_of_use.html" target="_blank">Terms of Use</a></li>
                  					   </ul>
 							  </li>
-                                   			 <li><a href="#abc">ABC</a>
-							  <ul class="sub-dropdown-content">
-                     					   <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
-                     					   <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
-                    					    <li><a href="assets/Apps/ABC/privacy_policy.html" target="_blank">Privacy Policy</a></li>
-                   					     <li><a href="assets/Apps/ABC/terms_of_use.html" target="_blank">Terms of Use</a></li>
-                 					   </ul>
+                                   			 <li>
+								<a href="#abc">ABC</a>
+							 	 <ul class="sub-dropdown-content">
+                     					 		  <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
+                     							 <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
+                    					  		  <li><a href="assets/Apps/ABC/privacy_policy.html" target="_blank">Privacy Policy</a></li>
+                   					   		  <li><a href="assets/Apps/ABC/terms_of_use.html" target="_blank">Terms of Use</a></li>
+                 					  	 </ul>
 							 </li>
 						 </ul>
 					     </li>
