--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                                			 <ul class="dropdown-content">
                                   			  <li>
 							<a href="#caputok">Caputok</a>
+								  <div class="sub-headings">
+									  <h3>Subheading 1</h3>
+									  <h3>Subheading 2</h3>
+									  <h3>Subheading 3</h3>
+									  <h3>Subheading 4</h3>
+								  </div>
 							<ul class="sub-dropdown-content">
 							 	<li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
                       					 	 <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
