--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                                   			  <li>
 							<a href="#caputok">Caputok</a>
 								<div class="sub-headings">
-									<a href="https://play.google.com/store/apps/details?id=your.app.id" class="subheading-link" target="_blank">Google Play</a>
-									<a href="https://apps.apple.com/us/app/your-app-name/id123456789" class="subheading-link" target="_blank">App Store</a>
-									<a href="assets/apps/caputok/privacy_policy.html" class="subheading-link" target="_blank" >Privacy Policy</a>
-									<a href="assets/apps/caputok/terms_of_use.html" class="subheading-link" target="_blank">Terms of Use</a>
+									<a href="https://play.google.com/store/apps/details?id=your.app.id" class="subheading-link">Google Play</a>
+									<a href="https://apps.apple.com/us/app/your-app-name/id123456789" class="subheading-link">App Store</a>
+									<a href="assets/apps/caputok/privacy_policy.html" class="subheading-link">Privacy Policy</a>
+									<a href="assets/apps/caputok/terms_of_use.html" class="subheading-link">Terms of Use</a>
 								</div>
 									
 							
