--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 							  </li>
                                    			 <li>
 								<a href="#abc">ABC</a>
-							 	 <ul class="sub-dropdown-content">
-                     					 		  <li><a href="https://play.google.com/store/apps/details?id=your.app.id" target="_blank">Google Play</a></li>
-                     							 <li><a href="https://apps.apple.com/us/app/your-app-name/id123456789" target="_blank">App Store</a></li>
-                    					  		  <li><a href="assets/Apps/ABC/privacy_policy.html" target="_blank">Privacy Policy</a></li>
-                   					   		  <li><a href="assets/Apps/ABC/terms_of_use.html" target="_blank">Terms of Use</a></li>
-                 					  	 </ul>
+							 	 <div class="sub-headings">
+									<a href="https://play.google.com/store/apps/details?id=your.app.id" class="subheading-link">Google Play</a>
+									<a href="https://apps.apple.com/us/app/your-app-name/id123456789" class="subheading-link">App Store</a>
+									<a href="assets/apps/caputok/privacy_policy.html" class="subheading-link">Privacy Policy</a>
+									<a href="assets/apps/caputok/terms_of_use.html" class="subheading-link">Terms of Use</a>
+								</div>
 							 </li>
 						 </ul>
 					     </li>
